Pass CI on Java 17.
(#36)