@@ -3,7 +3,7 @@ plugins {
     id 'com.diffplug.gradle.spotless' version '4.0.1'
     id 'eclipse'
     // https://github.com/tbroyer/gradle-errorprone-plugin
-    id 'net.ltgt.errorprone' version '1.3.0'
+    id 'net.ltgt.errorprone' version '2.0.2'
 }
 
 repositories {
@@ -37,7 +37,7 @@ dependencies {
     testImplementation files("${cfHome}/framework-test/build/libs/framework-test-3.21.5-SNAPSHOT.jar")
 
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-    errorprone "com.google.errorprone:error_prone_core:2.4.0"
+    errorprone "com.google.errorprone:error_prone_core:2.15.0"
 }
 
 tasks.withType(JavaCompile).all {
@@ -67,6 +67,11 @@ tasks.withType(Test) {
     if (!JavaVersion.current().java9Compatible) {
         jvmArgs "-Xbootclasspath/p:${configurations.errorproneJavac.asPath}"
     }
+
+    // Required because checker-framework uses APIs from these modules.
+    jvmArgs(
+            ["code", "comp", "main", "processing", "tree", "util"]
+                    .collect { "--add-opens=jdk.compiler/com.sun.tools.javac.$it=ALL-UNNAMED" })
 
     testLogging {
         showStackTraces = false
